# i3-workspace-namer

./: .gitignore  CMakeLists.txt  config.json
src/: ConfigParser.cpp  ConfigParser.h  NameFinder.cpp  NameFinder.h  SignalHandler.cpp  SignalHandler.h  WorkspaceManager.cpp  WorkspaceManager.h  main.cpp
